# ardur

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.hub  Dockerfile.proxy  MEDIA.md  Makefile  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  STATUS.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_request.yml
.github/workflows/: codeql.yml  hugo-site.yml  link-check.yml  secret-scan.yml  tests.yml  validate-formats.yml
deploy/: README.md
docs/: README.md  TESTING.md  conductor-bootstrap.md  coverage-map.md  engineering-standards.md  known-limitations.md  mvp-evaluator-guide.md  protocol-roots.md  public-import-plan.md  security-model.md
docs/agent-instructions/: README.md  claude.md  codex.md  conductor.md  shared.md
docs/articles/: 05-proof-media-that-actually-means-something.md  06-public-import-discipline.md  README.md
docs/audit/: codeql-dismissals-2026-04-29.md
docs/comparisons/: README.md  hook-evaluation-model.md  oauth-and-managed-agent-auth.md  protocol-overhead.md
docs/specs/: README.md  (+14 more)
examples/: README.md
go/: README.md  go.mod  go.sum
media/: selected-assets.json
python/: README.md  pyproject.toml
python/tests/: comprehensive_test_report.json  conftest.py  run_advanced_adversarial.py  run_adversarial_suite.py  run_all_models.py  run_cloud_model_test.py  test_aat_adapter.py  test_approval_governance.py  test_ardur_comprehensive_integration.py  test_ardur_overhead_ab.py  test_ardur_personal_hub.py  test_ardur_personal_native_host.py  test_ardur_profile.py  test_article12_export.py  test_attestation.py  test_backed_policy_store.py  test_behavioral_fingerprint.py  test_biscuit_escape.py  test_biscuit_passport.py  test_calculator_bounds.py  test_cedar_backend.py  test_claude_code_hook.py  test_claude_code_hook_latency.py  test_claude_code_telemetry.py  test_cli_issue.py  test_codex_app_server_fixture.py  test_composition.py  test_composition_proofs.py  test_delegation.py  test_denial_vocabulary.py  test_examples_governance_integration.py  test_examples_smoke.py  test_forbid_rules_backend.py  test_gemini_cli_hook.py  test_http.py  test_iat_skew_helper.py  test_jwks.py  test_kernel_effect_receipt_schema.py  test_lineage_budget.py  test_live_governance_verify_artifacts.py  (+15 more)
python/tests/test-results/: README.md  SUMMARY.json  SUMMARY.md  cloud-model-1t.json  local-model-8b.json
python/tests/test-results/advanced/: advanced-results-20260514-202601.json  advanced-summary-20260514-202601.md
python/tests/test-results/adversarial/: adversarial-results-20260514-195019.json  adversarial-summary-20260514-195019.md
python/vibap/: __init__.py  aat_adapter.py  approvals.py  ardur_personal_native_host.py  ardur_profile.py  article12_export.py  attestation.py  backed_policy_store.py  behavioral_fingerprint.py  biscuit_passport.py  claude_code_daemon.py  claude_code_hook.py  claude_code_report.py  claude_code_telemetry.py  cli.py  codex_app_server_fixture.py  denial.py  gemini_cli_hook.py  legacy_passport.py  lineage_budget.py  log_rotation.py  memory.py  metrics.py  mission.py  mission_compile.py  native_checks.py  passport.py  personal_hub.py  policy_backend.py  policy_store.py  posture_index.py  proxy.py  rate_limiter.py  receipt.py  semantic_judge.py  shareable_redaction.py  spiffe_identity.py  tls.py  tool_response_provenance.py  training_attestation.py
python/vibap/_specs/: __init__.py
python/vibap/backends/: __init__.py  cedar.py  forbid_rules.py  native.py
python/vibap/posture/: __init__.py  claude_detector.py
reports/: LINEAGE_BUDGET_DELEGATION_PLAN_REVIEW_2026-05-13.md  PHASE2_CGROUP_FILTER_VERIFICATION_2026-05-10.md  PHASE2_DAEMON_CUSTODY_SCAFFOLD_2026-05-10.md  PHASE2_DAEMON_KERNEL_BOUNDARY_CLAIM_LEDGER_2026-05-11.md  PHASE2_DAEMON_PREFLIGHT_PROTOCOL_2026-05-10.md  PHASE2_EBPF_DRIFT_REVIEW_2026-05-10.md  PHASE2_EBPF_MVP_PLAN_2026-05-10.md  PHASE2_EBPF_MVP_VERIFICATION_2026-05-10.md  PHASE2_EBPF_TOOL_INVENTORY_2026-05-10.md  PHASE2_KERNEL_FILTERING_AND_DAEMON_PREFLIGHT_PLAN_2026-05-10.md  hook-latency-canonical-reconciliation-2026-05-08.md  phase2-ebpf-smoke-output-rootful.txt  phase2-ebpf-smoke-output.txt  phase2-ebpf-smoke-script-run.txt
scripts/: build-knowledge-graph.py  check-local.sh  conductor-bootstrap.sh  phase2-ebpf-loop.sh  run-phase2-ebpf-smoke.sh  run-rwt-phase1-fresh-user.py  setup-dev.sh  verify-mvp.sh
site/: README.md  hugo.yaml
(+461 files in other folders)
